# gst-itc

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  drop_schema.py  implementation_plan.md  requirements.txt  run_reconciliation.py  sample_gstr_2b.csv  sample_purchase_register.csv  test.json  test.py
alembic/: env.py
app/: main.py
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 91900dcbe366_initial_migration.py
backend/app/: main.py  seed.py
backend/app/api/: audit.py  auth.py  deps.py  health.py  runs.py
backend/app/api/dependencies/: auth.py  client.py
backend/app/api/routers/: auth.py  clients.py  files.py  integrations.py  members.py  reports.py  runs.py  subscription.py  vendors.py  workspace.py
backend/app/core/: config.py  database.py  email.py  exceptions.py  logging.py  security.py
backend/app/db/: session.py
backend/app/ingestion/: base.py
backend/app/models/: __init__.py  base.py  models.py
backend/app/schemas/: audit.py  auth.py  client.py  contracts.py  file.py  integration.py  run.py  runs.py  subscription.py  user.py  vendor.py
backend/app/services/: audit.py  matcher.py  matching_engine.py  normalizer.py  parser.py  reconciliation.py
backend/app/storage/: base.py  local.py
backend/mock_data/: config.json
backend/tests/: conftest.py  test_audit.py  test_contracts.py  test_health.py  test_matching_engine.py  test_normalizer.py  test_orchestrator.py  test_parser.py  test_runs.py
frontend/: .env.example  README.md  (+6 more)
(+129 files in other folders)
